New camera contexts (#9)
* New context config entries

* Use Math.clamp, fix parameter name

* New context implementations (climbing, aiming, fishing, lunging)